fixed important market z-index issue

--- a/css/market.sass
+++ b/css/market.sass
@@ -2,10 +2,13 @@
   pointer-events: none
   user-select: none
 
+.market-ui
+  z-index: 2
+
 #market.market-active
   display: block !important
   position: relative
-  z-index: 10
+  z-index: 1
 
 .market
   width: 180px
@@ -118,7 +121,7 @@
   right: 0
   bottom: 0
   color: #fff
-  z-index: -2
+  z-index: 1
   h1
     font-size: 1.8em
     font-weight: normal
